# py_template

./: .buildinfo  .gitignore  .readthedocs.yml  HISTORY.rst  LICENSE.rst  README.md  README.rst  genindex.html  getting_started.html  index.html  objects.inv  py_API.html  pyproject.toml  search.html  searchindex.js  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coding_standards.yml  docs.yml  format_lint.yml  package.yml  python-package-conda.yml  tests.yml  type_check.yml
_modules/: index.html
_modules/py_template/: example_module.html
_sources/: getting_started.rst.txt
_static/: custom.css  documentation_options.js
coverage/: class_index.html  function_index.html  index.html  status.json  z_e6f4b5fa949e942d_example_module_py.html
docs/: conf.py  getting_started.rst  index.rst  py_API.rst
example_setup_files/:  minimal_pyproject.toml  README.md  minimal_setup.py
py_template/: __init__.py  example_module.py
test/: test_example_module.py
