[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "py_template"
description = "Template Python repository"
requires-python = ">=3.9"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "LICENSE.rst", content-type = "text/plain" }
authors = [
  { name = "CCA Software Group", email = "jjennings@flatironinstitute.org" },
]
dependencies = ["numpy>=1.24"]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coverage",
    "coverage-badge",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "sphinx_rtd_theme",
    "sphinxcontrib-fulltoc",
    "nbsphinx",
    "jupyter_client",
    "ipykernel",
]
dev = ["py_template[test, docs]"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]

[tool.setuptools_scm]
write_to = "py_template/version.py"

[tool.pytest.ini_options]
testpaths = [
  "test",
  "docs",
]

[tool.coverage.run]
omit = [
 "py_template/__init*",
 "py_template/*setup_package*",
 "py_template/extern/*",
 "py_template/version*",
 "*/py_template/__init*",
 "*/py_template/*setup_package*",
 "*/py_template/extern/*",
 "*/py_template/version*",
 "test/*",
 "*/test/*",
 "test/conftest.py",
 "test/conftest.py", 
]