[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "py_template"
description = "Template Python repository"
requires-python = ">=3.10"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "LICENSE.rst", content-type = "text/plain" }
authors = [
  { name = "Jeff Jennings", email = "jjennings@flatironinstitute.org" },
]
dependencies = ["numpy>=1.24"]
static = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "coverage-badge",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "sphinx_rtd_theme",
    "sphinxcontrib-fulltoc",
    "nbsphinx",
    "jupyter_client",
    "ipykernel",
]
coding_standards = [
    "black",
    "ruff",
    "mypy",
]
dev = ["py_template[test, docs, coding_standards]"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]

[tool.pytest.ini_options]
testpaths = [
  "test",
  "docs",
]

[tool.coverage.run]
omit = [
 "py_template/__init*",
 "py_template/*setup_package*",
 "py_template/extern/*",
 "*/py_template/__init*",
 "*/py_template/*setup_package*",
 "*/py_template/extern/*",
 "test/*",
 "*/test/*",
 "test/conftest.py",
 "test/conftest.py", 
]